--- a/conf/config.yaml
+++ b/conf/config.yaml
@@ -15,7 +15,7 @@ mysql:
   port: 3307
   user: "root"
   password: "123456"
-  dbname: "mysql_demo"
+  db_name: "bluebell"
   max_open_conns: 200
   max_idle_conns: 50
 redis:
